--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<p> Mais um parágrafo para demonstrar o HTML</p>
 	<h2>Mais um teste</h2>
 	<p>Teste 3ª paragráfo</p>
+	<h2>Teste com sincronia de contas</h2>
+	<p>Teste 4ª paragráfo</p>
 	
 </body>
 </html>
